[tool.poetry]
name = "proceedings-ml"
version = "0.1.0"
description = ""
authors = ["aibakeneko <aibakeneko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
prodigy = {path = "lib/prodigy-1.14.5-cp311-cp311-linux_x86_64.whl"}
jsonlines = "^4.0.0"
typer = "^0.9.0"
pandas = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 120
py_version = "auto"
float_to_top = true
src_paths = [ "proceedings_ml", "tests" ]
