[tool.poetry]
name = "proceedings-ml"
version = "0.1.0"
description = ""
authors = ["aibakeneko <aibakeneko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jsonlines = "^4.0.0"
pandas = "^2.1.2"
prodigy = {path = "lib/prodigy-1.14.5-cp311-cp311-linux_x86_64.whl"}
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.11.0"}
ipykernel = "^6.26.0"
isort = "^5.12.0"
mypy = "^1.6.1"
pylint = "^3.0.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
line_length = 120
py_version = "auto"
float_to_top = true
src_paths = [ "proceedings_ml", "tests" ]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py311"]

[tool.pylint.main]
exit-zero = true
ignore-paths = "deprecated"
jobs = 0
persistent = true
py-version = "3.11"
suggestion-mode = true

[tool.pylint.design]
max-args = 8
max-attributes = 14

[tool.pylint.exceptions]
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]

[tool.pylint.format]
expected-line-ending-format = "LF"
max-line-length = 120

[tool.pylint.logging]
logging-format-style = "old"

[tool.pylint."messages control"]
extension-pkg-whitelist = "pydantic"
disable = [
    "duplicate-code",
    "invalid-name",
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "line-too-long",
    "pointless-string-statement",
    "global-statement",
    "c-extension-no-member",
    "too-few-public-methods",
    "logging-format-interpolation",
    "logging-fstring-interpolation",
    "consider-using-enumerate",
    "unnecessary-comprehension",
    "too-many-branches",
    "too-many-locals",
    "wrong-import-order",
    "wrong-spelling-in-comment",
    "wrong-spelling-in-docstring"
]

[tool.pylint.miscellaneous]
notes = ""

[tool.pylint.refactoring]
never-returning-functions = ["sys.exit", "argparse.parse_error"]

[tool.pylint.reports]
output-format = "colorized"
score = false

[tool.pytest.ini_options]
log_cli = "False"
testpaths = [
    "tests",
]
python_files = "*_test.py"
python_functions = "test_*"